Good work! Add from view almoust complete! Signed-off-by: Arkady Soloveyko <arkmelky@mail.ru>

--- a/Soloveyko_AV/Client/Client.csproj
+++ b/Soloveyko_AV/Client/Client.csproj
@@ -172,6 +172,9 @@
     <None Include="Service References\DataAccessService\DataService31.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\DataAccessService\DataService4.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\DataAccessService\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
