Programm ready ! Signed-off-by: Arkady Soloveyko <arkmelky@mail.ru>

--- a/Soloveyko_AV/Entities/Entities.csproj
+++ b/Soloveyko_AV/Entities/Entities.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChartModels\ChartModel.cs" />
     <Compile Include="DbModels\Deal.cs" />
     <Compile Include="DbModels\ObjectOfTransaction.cs" />
     <Compile Include="DbModels\User.cs" />
