--- a/Soloveyko_AV/Client/Client.csproj
+++ b/Soloveyko_AV/Client/Client.csproj
@@ -37,8 +37,11 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -57,6 +60,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AdditionalFunctionality\SearchHelper.cs" />
+    <Compile Include="ChartForm\ChartForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChartForm\ChartForm.Designer.cs">
+      <DependentUpon>ChartForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="OtherWindows\DealWindow.xaml.cs">
       <DependentUpon>DealWindow.xaml</DependentUpon>
     </Compile>
@@ -117,6 +126,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="ChartForm\ChartForm.resx">
+      <DependentUpon>ChartForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -132,6 +144,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Service References\DataAccessService\Client.DataAccessService.ChartData.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\DataAccessService\DataService.wsdl" />
     <None Include="Service References\DataAccessService\DataService.xsd">
       <SubType>Designer</SubType>
@@ -169,6 +184,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\DataAccessService\DataService4.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\DataAccessService\DataService5.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\DataAccessService\Reference.svcmap">
